chore: remove DVC-tracked files from Git tracking and update .gitignore

--- a/pipeline/.gitignore
+++ b/pipeline/.gitignore
@@ -148,3 +148,22 @@ feature_repo/feature_store.yaml
 feature_repo/features.parquet
 metrics/feast/metrics.json
 feature_repo/feature_repo.py
+.venv-models
+metrics/logisticregression/feature_importance.csv
+metrics/logisticregression/metrics.json
+metrics/neuralnetwork/classification_report.json
+metrics/neuralnetwork/metrics.json
+models/logisticregression/model.pth
+models/logisticregression/scaler.joblib
+models/neuralnetwork
+plots/logisticregression/confusion_matrix.png
+plots/logisticregression/feature_importance.png
+plots/logisticregression/precision_recall_curve.png
+plots/logisticregression/roc_curve.png
+plots/neuralnetwork/calibration_curve.png
+plots/neuralnetwork/confusion_matrix.png
+plots/neuralnetwork/precision_recall_curve.png
+plots/neuralnetwork/probability_distribution.png
+plots/neuralnetwork/roc_curve.png
+plots/neuralnetwork/training_accuracy.png
+plots/neuralnetwork/training_loss.png
