--- a/.github/workflows/mlops-pipeline.yml
+++ b/.github/workflows/mlops-pipeline.yml
@@ -53,7 +53,7 @@ jobs:
         if: steps.cache-venv.outputs.cache-hit != 'true'
         run: |
           python3 -m venv .venv
-          pip install uv
+          pip install uv dvc
 
       - name: Run DVC Pipeline
         working-directory: pipeline
