--- a/.github/workflows/package-deliverables.yml
+++ b/.github/workflows/package-deliverables.yml
@@ -38,13 +38,34 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
-          fetch-depth: 0
+          fetch-depth: 1
 
       - name: Cache Apt Archives
         uses: actions/cache@6849a6489940f00c2f30c0fb92c6274307ccb58a # v4.1.2
         with:
           path: /var/cache/apt/archives
           key: ${{ runner.os }}-apt-${{ hashFiles(env.PACKAGES) }}
+
+      - name: Set up Python
+        uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b # v5.3.0
+        with:
+          python-version: "3.11"
+
+      - name: Run DVC Pipeline
+        working-directory: pipeline
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+          EMAILS: ${{ secrets.EMAILS }}
+          INITIAL_PASSWORD: ${{ secrets.INITIAL_PASSWORD }}
+          GROUP_NAME: ${{ secrets.GROUP_NAME }}
+          BUCKET_NAME: ${{ secrets.BUCKET_NAME }}
+          TABLE_NAME: ${{ secrets.TABLE_NAME }}
+          BUCKET_KEYS: ${{ secrets.BUCKET_KEYS }}
+        run: |
+          pip install dvc uv
+          dvc pull
 
       - name: Install System Dependencies
         run: |
@@ -105,6 +126,27 @@ jobs:
         with:
           path: /var/cache/apt/archives
           key: ${{ runner.os }}-apt-${{ hashFiles(env.PACKAGES) }}
+
+      - name: Set up Python
+        uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b # v5.3.0
+        with:
+          python-version: "3.11"
+
+      - name: Run DVC Pipeline
+        working-directory: pipeline
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+          EMAILS: ${{ secrets.EMAILS }}
+          INITIAL_PASSWORD: ${{ secrets.INITIAL_PASSWORD }}
+          GROUP_NAME: ${{ secrets.GROUP_NAME }}
+          BUCKET_NAME: ${{ secrets.BUCKET_NAME }}
+          TABLE_NAME: ${{ secrets.TABLE_NAME }}
+          BUCKET_KEYS: ${{ secrets.BUCKET_KEYS }}
+        run: |
+          pip install dvc uv
+          dvc pull
 
       - name: Install System Dependencies
         run: |
