--- a/pipeline/params.yaml
+++ b/pipeline/params.yaml
@@ -4,6 +4,7 @@
 #-----------------------------------------------------------------------------#
 project: diabetes_readmission
 version: 0.1.0
+mode: full
 seed: 42
 
 #-----------------------------------------------------------------------------#
@@ -77,7 +78,6 @@ dataset:
 #-----------------------------------------------------------------------------#
 models:
   base:
-    mode: quick
     quick:
       sample_fraction: 0.1
     full:
