--- a/pipeline/.gitignore
+++ b/pipeline/.gitignore
@@ -2,25 +2,45 @@
 .venv-models
 /.pytest_cache
 /.venv-autogluon
+/.venv-autogluon
+/.venv-explore
 /.venv-explore
 /.venv-featurize
+/.venv-featurize
+/.venv-infrastruct
 /.venv-infrastruct
 /.venv-ingest
+/.venv-ingest
+/.venv-logisticregression
 /.venv-logisticregression
 /.venv-neuralnetwork
+/.venv-neuralnetwork
+/.venv-preprocess
 /.venv-preprocess
 /autogluon-frozen.txt
+/autogluon-frozen.txt
+/dag.md
 /dag.md
 /deploy-frozen.txt
+/deploy-frozen.txt
+/explore-frozen.txt
 /explore-frozen.txt
 /feature_repo
 /featurize-frozen.txt
+/featurize-frozen.txt
+/frozen.txt
 /frozen.txt
 /infrastruct-frozen.txt
+/infrastruct-frozen.txt
+/ingest-frozen.txt
 /ingest-frozen.txt
 /logisticregression-frozen.txt
+/logisticregression-frozen.txt
+/neuralnetwork-frozen.txt
 /neuralnetwork-frozen.txt
 /preprocess-frozen.txt
+/preprocess-frozen.txt
+/reports
 /reports
 /requirements.txt
 data/feature_repo/data_hash.txt
@@ -35,6 +55,7 @@ data/raw/data.csv
 data/raw/data.parquet
 data/raw/metadata.json
 data/raw/variables.json
+dvc.lock
 feature_repo/data_hash.txt
 feature_repo/feature_repo.py
 feature_repo/feature_store.yaml
@@ -166,26 +187,5 @@ plots/preprocess/number_outpatient_distribution.png
 plots/preprocess/readmission_distribution.png
 plots/preprocess/time_in_hospital_distribution.png
 update.sh
-wandb/*
-
-/reports
-/autogluon-frozen.txt
-/.venv-autogluon
-/neuralnetwork-frozen.txt
-/.venv-neuralnetwork
-/logisticregression-frozen.txt
-/.venv-logisticregression
-/frozen.txt
-/infrastruct-frozen.txt
-/.venv-infrastruct
-/ingest-frozen.txt
-/.venv-ingest
-/preprocess-frozen.txt
-/.venv-preprocess
-/explore-frozen.txt
-/.venv-explore
-/featurize-frozen.txt
-/.venv-featurize
-/dag.md
-/deploy-frozen.txt
 update.sh
+wandb/*
