--- a/pipeline/pyproject.toml
+++ b/pipeline/pyproject.toml
@@ -1,56 +1,44 @@
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["setuptools", "wheel", "uv"]
+build-backend = "setuptools.build_meta"
 
 [project]
-name = "pipeline"
+name = "diabetic-readmission-risk-prediction"
 version = "0.1.0"
-description = "MLOps Pipeline"
-requires-python = ">=3.8,<3.12"
+description = "Diabetic Readmission Risk Prediction using Machine Learning"
+readme = "../README.md"
+requires-python = ">=3.7"
 license = { text = "MIT" }
 authors = [
     { name = "Jonathan Agustin", email = "jonathan.agustin@example.com" },
     { name = "Zack Robertson", email = "zack.robertson@example.com" },
-    { name = "Lisa Vo", email = "lisa.vo@example.com" },
+    { name = "Lisa Vo", email = "lisa.vo@example.com" }
 ]
 keywords = ["mlops", "diabetes", "prediction", "healthcare"]
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
+    "Operating System :: OS Independent"
 ]
-dependencies = ["dvc[s3]", "loguru", "pip", "python-dotenv", "uv"]
-
-[project.optional-dependencies]
-dev = ["ruff", "pytest"]
-
-[tool.hatch.envs.default]
-features = ["dev"]
-dependencies = ["pytest"]
+dependencies = [
+    "dvc[s3]",
+    "uv",
+]
 
 [tool.black]
 line-length = 120
-target-version = ["py39"]
+target-version = ["py38", "py39", "py310", "py311"]
 
 [tool.flake8]
 max-line-length = 120
-exclude = [
-    ".git",
-    "__pycache__",
-    ".venv",
-    "site-packages",
-    "build",
-    "dist",
-    ".mypy_cache",
-    ".pytest_cache",
-]
+exclude = [".git", "__pycache__", ".venv", "site-packages", "build", "dist", ".mypy_cache", ".pytest_cache"]
 
 [tool.isort]
 multi_line_output = 3
 include_trailing_comma = true
 line_length = 120
 known_third_party = ["feast", "yaml"]
-skip_glob = [".venv*/*"]
+skip_glob = [".venv-*/*"]
 
 [tool.pylint]
 disable = [
@@ -58,7 +46,7 @@ disable = [
     "invalid-name",
     "line-too-long",
     "too-few-public-methods",
-    "import-error",
+    "import-error"
 ]
 max-line-length = 120
 
@@ -70,12 +58,13 @@ exclude = "\\.venv-.*"
 
 [tool.coverage.run]
 source = ["pipeline/src", "pipeline/models"]
+omit = ["tests/*"]
 
 [tool.coverage.report]
 show_missing = true
 
 [tool.uv]
-cache-dir = "./.uv_cache"
+environments = ["sys_platform == 'linux'"]
 
 [tool.ruff]
 exclude = [
@@ -106,7 +95,7 @@ exclude = [
     "dist",
     "node_modules",
     "site-packages",
-    "venv",
+    "venv"
 ]
 line-length = 120
 indent-width = 4
@@ -126,17 +115,3 @@ skip-magic-trailing-comma = false
 line-ending = "auto"
 docstring-code-format = false
 docstring-code-line-length = "dynamic"
-
-[tool.pytest.ini_options]
-testpaths = ["tests"]
-python_files = ["test_*.py"]
-python_classes = ["Test*"]
-python_functions = ["test_*"]
-addopts = "--verbose --cov=src --cov-report=html --cov-report=term-missing"
-filterwarnings = ["ignore::DeprecationWarning"]
-markers = [
-    "unit: Unit tests",
-    "integration: Integration tests",
-    "e2e: End-to-end tests",
-    "slow: Slow running tests",
-]
